@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-04-21 r74623) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-04-22 r74625) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -224,6 +224,68 @@ viewport[C]->(viewport[D])
 > 
 > 
 > cleanEx()
+> nameEx("deviceLoc")
+> ### * deviceLoc
+> 
+> flush(stderr()); flush(stdout())
+> 
+> ### Name: deviceLoc
+> ### Title: Convert Viewport Location to Device Location
+> ### Aliases: deviceLoc deviceDim
+> ### Keywords: dplot
+> 
+> ### ** Examples
+> 
+> ## A tautology
+> grid.newpage()
+> pushViewport(viewport())
+> deviceLoc(unit(1, "inches"), unit(1, "inches"))
+$x
+[1] 1in
+
+$y
+[1] 1in
+
+> 
+> ## Something less obvious
+> grid.newpage()
+> pushViewport(viewport(width=.5, height=.5))
+> grid.rect()
+> x <- unit(1, "in")
+> y <- unit(1, "in")
+> grid.circle(x, y, r=unit(2, "mm"))
+> loc <- deviceLoc(x, y)
+> loc
+$x
+[1] 2.7in
+
+$y
+[1] 2.75in
+
+> upViewport()
+> grid.circle(loc$x, loc$y, r=unit(1, "mm"), gp=gpar(fill="black"))
+> 
+> ## Something even less obvious
+> grid.newpage()
+> pushViewport(viewport(width=.5, height=.5, angle=30))
+> grid.rect()
+> x <- unit(.2, "npc")
+> y <- unit(2, "in")
+> grid.circle(x, y, r=unit(2, "mm"))
+> loc <- deviceLoc(x, y)
+> loc
+$x
+[1] 2.39165408813987in
+
+$y
+[1] 3.20650635094611in
+
+> upViewport()
+> grid.circle(loc$x, loc$y, r=unit(1, "mm"), gp=gpar(fill="black"))
+> 
+> 
+> 
+> cleanEx()
 > nameEx("explode")
 > ### * explode
 > 
@@ -295,8 +357,9 @@ g1::g2
 > 
 > grid.grill()
 > getNames()
-[1] "GRID.text.165"     "GRID.rect.166"     "GRID.rect.167"    
-[4] "GRID.segments.168" "GRID.segments.169"
+[1] "GRID.text.171"     "GRID.rect.172"     "GRID.circle.173"  
+[4] "GRID.circle.174"   "GRID.rect.175"     "GRID.rect.176"    
+[7] "GRID.segments.177" "GRID.segments.178"
 > 
 > 
 > 
@@ -684,12 +747,12 @@ Error in editDLfromGPath(gPath, specs, strict, grep, global, redraw) :
 > # Draw xaxis
 > grid.xaxis(name="xax")
 > grid.ls()
-GRID.text.244
+GRID.text.253
 xax
 > # Force xaxis
 > grid.force()
 > grid.ls()
-GRID.text.244
+GRID.text.253
 xax
   major
   ticks
@@ -697,51 +760,51 @@ xax
 > # Revert xaxis
 > grid.revert()
 > grid.ls()
-GRID.text.244
+GRID.text.253
 xax
 > # Draw and force yaxis
 > grid.force(yaxisGrob(), draw=TRUE)
-forcedgrob[GRID.yaxis.245] 
+forcedgrob[GRID.yaxis.254] 
 > grid.ls()
-GRID.text.244
+GRID.text.253
 xax
-GRID.yaxis.245
+GRID.yaxis.254
   major
   ticks
   labels
 > # Revert yaxis
 > grid.revert()
 > grid.ls()
-GRID.text.244
+GRID.text.253
 xax
-GRID.yaxis.245
+GRID.yaxis.254
 > # Force JUST xaxis
 > grid.force("xax")
 > grid.ls()
-GRID.text.244
+GRID.text.253
 xax
   major
   ticks
   labels
-GRID.yaxis.245
+GRID.yaxis.254
 > # Force ALL
 > grid.force()
 > grid.ls()
-GRID.text.244
+GRID.text.253
 xax
   major
   ticks
   labels
-GRID.yaxis.245
+GRID.yaxis.254
   major
   ticks
   labels
 > # Revert JUST xaxis
 > grid.revert("xax")
 > grid.ls()
-GRID.text.244
+GRID.text.253
 xax
-GRID.yaxis.245
+GRID.yaxis.254
   major
   ticks
   labels
@@ -2076,7 +2139,7 @@ vp1::vp2
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  1.972 0.062 2.046 0 0 
+Time elapsed:  2.72 0.036 2.757 0 0 
 > grDevices::dev.off()
 null device 
           1 
